manifest PWA lighthouse icons

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta name="Description" content="Game based on 2048" charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/logo.svg" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/4096.png" />
+    <link rel="icon" sizes="192x192" href="4096.png" />
+    <link rel="apple-touch-icon" href="4096.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!--
